--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Andrés Fernández | Portfolio</title>
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <a href="#" class="logo">Portfolio.</a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Portfolio</li>
+                <li><a href="#"></a>Services</li>
+                <li><a href="#"></a>Contact</li>
+            </ul>
+        </nav>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
