first button size

--- a/index.html
+++ b/index.html
@@ -24,12 +24,18 @@
                 <a href="#">Contact</a>
             </nav> 
     </header>
-    <main>
-        <div class = "my-presentation">
+    <section class="home">
+        <div class = "home-detail">
             <h1>Andrés Fernández</h1>
             <h2>I'm a <span>coder</span></h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo totam mollitia alias, omnis ab nulla fugiat tenetur officiis,<br>
-                 optio accusamus ipsa sapiente in reprehenderit reiciendis, corporis iure veritatis sequi error?</p>
+                 optio accusamus ipsa sapiente in reprehenderit reiciendis, corporis iure veritatis sequi error? Lorem ipsum dolor sit amet 
+                 consectetur adipisicing elit. Praesentium, ea. Consequatur itaque animi est eius minus obcaecati voluptas quam provident
+                  consequuntur ad inventore possimus, ipsa autem quisquam doloribus. Quisquam, earum.
+            </p>
+            <div class="btn-box">
+                <a class="btn-hire" href="#">Hire me</a>
+            </div>
         </div>
    
         
