--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
                  consectetur adipisicing elit. Praesentium, ea. Consequatur itaque animi est eius minus obcaecati voluptas quam provident
                   consequuntur ad inventore possimus, ipsa autem quisquam doloribus. Quisquam, earum.
             </p>
+
             <div class="btn-box">
                 <a class="btn-hire" href="#">Hire me</a>
+                <a class="btn-download" href="#">Download cv</a>
             </div>
         </div>
    
