--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
                 <a href="#">Contact</a>
             </nav> 
     </header>
+    <!--Home presentation-->
     <section class="home">
         <div class = "home-detail">
             <h1>Andrés Fernández</h1>
             <h2>I'm a <span>coder</span></h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo totam mollitia alias, omnis ab nulla fugiat tenetur officiis,<br>
-                 optio accusamus ipsa sapiente in reprehenderit reiciendis, corporis iure veritatis sequi error? Lorem ipsum dolor sit amet 
-                 consectetur adipisicing elit. Praesentium, ea. Consequatur itaque animi est eius minus obcaecati voluptas quam provident
-                  consequuntur ad inventore possimus, ipsa autem quisquam doloribus. Quisquam, earum.
+            <p>Hi, I'm Andres Fernandez, a passionate coder with a knack for creating dynamic and innovative web solutions. <br>Take a journey through my work and discover how I turn ideas into digital reality.
             </p>
-
+            <!--Buttons | Hire me | Download CV-->
             <div class="btn-box">
                 <a class="btn-hire" href="#">Hire me</a>
                 <a class="btn-download" href="#">Download cv</a>
             </div>
         </div>
-   
-        
+        <div class="home-img-container">
+            <div class="home-img-box">
+                <img class="home-img-item" src="" alt="">
+            </div>        
+        </div>
     </main>
     <footer>
 
