metodologia bem aplicada

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     </header>
     <!--Home presentation-->
     <section class="home">
-        <div class = "home-detail">
+        <div class = "home__detail">
             <h1>Andrés Fernández</h1>
             <h2>I'm a <span>coder</span></h2>
             <p>Hi, I'm Andres Fernandez, a passionate coder with a knack for creating dynamic and innovative web solutions. <br>Take a journey through my work and discover how I turn ideas into digital reality.
             </p>
             <!--Buttons | Hire me | Download CV-->
-            <div class="btn-box">
-                <a class="btn-hire" href="#">Hire me</a>
-                <a class="btn-download" href="#">Download cv</a>
+            <div class="btn">
+                <a class="btn__hire" href="#">Hire me</a>
+                <a class="btn__download" href="#">Download cv</a>
             </div>
         </div>
     </main>
