--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header><!--Nav.bar + logo-->
         <!--Logo-->
-         <a href="#" class="logo">Portfolio.</a>
+         <a href="#" class="logo">Andrux.FX</a>
             <!--Nav. bar-->
             <nav>
                 <a href="#" class="active">Home</a>
@@ -28,7 +28,7 @@
     <section class="home">
         <div class = "home__detail">
             <h1>Andrés Fernández</h1>
-            <h2>I'm a <span>coder</span></h2>
+            <h2>I'm a <span class="typed"></span></h2>
             <p>Hi, I'm Andres Fernandez, a passionate coder with a knack for creating dynamic and innovative web solutions. <br>Take a journey through my work and discover how I turn ideas into digital reality.
             </p>
             <!--Buttons | Hire me | Download CV-->
@@ -38,6 +38,8 @@
             </div>
         </div>
     </main>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="main.js"></script>
     <footer>
 
     </footer>
