--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <!--Home presentation-->
     <section class="home">
         <div class = "home__detail">
-            <h1>Andrés Fernández</h1>
-            <h2>I'm a <span class="typed"></span></h2>
-            <p>Hi, I'm Andres Fernandez, a passionate coder with a knack for creating dynamic and innovative web solutions. <br>Take a journey through my work and discover how I turn ideas into digital reality.
+            <h1>Hi, I'm Andrés Fernández</h1>
+            <h2><span class="typed"></span></h2>
+            <p>Hello, my name is Andres Fernandez, a passionate coder with a knack for creating dynamic and innovative web solutions. <br>Take a journey through my work and discover how I turn ideas into digital reality.
             </p>
             <!--Buttons | Hire me | Download CV-->
             <div class="btn">
@@ -41,7 +41,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="main.js"></script>
     <footer>
-
+        <a href=""></a>
     </footer>
 </body>
 </html>
