mejora de intro

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class = "home__detail">
             <h1>Hi, I'm Andrés Fernández</h1>
             <h2><span class="typed"></span></h2>
-            <p>Hello, my name is Andres Fernandez, a passionate coder with a knack for creating dynamic and innovative web solutions. <br>Take a journey through my work and discover how I turn ideas into digital reality.
+            <p>Passionate coder with a strong focus on crafting dynamic, innovative web solutions. As a designer and developer, I bring ideas to life through clean design, robust functionality, and seamless user experiences. Explore my work and discover how I turn concepts into digital reality.
             </p>
             <!--Buttons | Hire me | Download CV-->
             <div class="btn">
