--- a/index.html
+++ b/index.html
@@ -41,7 +41,25 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script src="main.js"></script>
     <footer>
-        <a href=""></a>
+        <div class="social-icons">
+        <!-- Enlace a GitHub -->
+        <a href="https://github.com/andruxfx" target="_blank">
+            <i class="fab fa-github"></i>
+        </a>
+        <!-- Enlace a LinkedIn -->
+        <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        <!-- Enlace a Twitter (opcional) -->
+        <a href="https://twitter.com/tu-usuario" target="_blank">
+            <i class="fab fa-twitter"></i>
+        </a>
+        <!-- Enlace a Instagram (opcional) -->
+        <a href="https://www.instagram.com/tu-usuario" target="_blank">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <p>&copy; 2023 Andrés Fernández. Todos los derechos reservados.</p>
+        </div>
     </footer>
 </body>
 </html>
