creating about page

--- a/about.html
+++ b/about.html
@@ -17,33 +17,21 @@
     <header><!--Nav.bar + logo-->
         <!--Logo-->
          <a href="#" class="logo">Andrux.FX</a>
-
+         
             <!--Nav. bar-->
             <nav>
                 <a href="#" class="active">Home</a>
-                <a href="about.html">About</a>
+                <a href="#">About</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Services</a>
                 <a href="#">Contact</a>
             </nav> 
     </header>
-    <!--Home presentation-->
-    <section class="home">
-        <div class = "home__detail">
-            <h1>Hi, I'm Andrés Fernández</h1>
-            <h2><span class="typed"></span></h2>
-            <p>Passionate coder with a strong focus on crafting dynamic, innovative web solutions. As a designer and developer, I bring ideas to life through clean design, robust functionality, and seamless user experiences. Explore my work and discover how I turn concepts into digital reality.
-            </p>
-            <!--Buttons | Hire me | Download CV-->
-            <div class="btn">
-                <a class="btn__hire" href="#">Hire me</a>
-                <a class="btn__download" href="#">Download cv</a>
-            </div>
-        </div>
+   
+    <main>
+
     </main>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="main.js"></script>
-    </section>
+
     <footer>
         <div class="social-icons">
         <!-- Enlace a GitHub -->
