--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
          
             <!--Nav. bar-->
             <nav>
-                <a href="#" class="active">Home</a>
+                <a href="index.html" class="active">Home</a>
                 <a href="#">About</a>
                 <a href="#">Portfolio</a>
                 <a href="#">Services</a>
