--- a/about.html
+++ b/about.html
@@ -29,7 +29,11 @@
     </header>
    
     <main>
-
+        <section class="home">
+            <div class = "home__detail">
+               
+            </div>
+        </section>
     </main>
 
     <footer>
