empezando de cero

--- a/index.html
+++ b/index.html
@@ -3,68 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andrés Fernández | Portfolio</title>
-    <!--Custom CSS-->
+    <title>Andrés Fernández - Portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
-    <!--Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!--Icons-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <header><!--Nav.bar + logo-->
-        <!--Logo-->
-        
-         <a href="#" class="logo">Andrux.FX</a>
-
-            <!--Nav. bar-->
-            <nav>
-                <a href="#" class="active">Home</a>
-                <a href="about.html">About</a>
-                <a href="#">Portfolio</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
-            </nav> 
+    <header class="page-header">
+        <nav>
+            <a href="index.html" class="active">Home</a>
+            <a href="#">About</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </nav>
     </header>
-    <!--Home presentation-->
-    <section class="home">
-        <div class = "home__detail">
-            <h1>Hi, I'm Andrés Fernández</h1>
-            <h2><span class="typed"></span></h2>
-            <p>Passionate coder with a strong focus on crafting dynamic, innovative web solutions. As a designer and developer, I bring ideas to life through clean design, robust functionality, and seamless user experiences. Explore my work and discover how I turn concepts into digital reality.
-            </p>
-            <!--Buttons | Hire me | Download CV-->
-            <div class="btn">
-                <a class="btn__hire" href="#">Hire me</a>
-                <a class="btn__download" href="#">Download cv</a>
-            </div>
-        </div>
+    <main>
+
     </main>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script src="main.js"></script>
-    </section>
     <footer>
-        <div class="social-icons">
-        <!-- Enlace a GitHub -->
-        <a href="https://github.com/andruxfx" target="_blank">
-            <i class="fab fa-github"></i>
-        </a>
-        <!-- Enlace a LinkedIn -->
-        <a href="https://www.linkedin.com/in/tu-perfil" target="_blank">
-            <i class="fab fa-linkedin"></i>
-        </a>
-        <!-- Enlace a Twitter (opcional) -->
-        <a href="https://twitter.com/tu-usuario" target="_blank">
-            <i class="fab fa-twitter"></i>
-        </a>
-        <!-- Enlace a Instagram (opcional) -->
-        <a href="https://www.instagram.com/tu-usuario" target="_blank">
-            <i class="fab fa-instagram"></i>
-        </a>
-        </div>
-        <p class="copy-rights">&copy; 2023 Andrés Fernández. Todos los derechos reservados.</p>
+
     </footer>
+
 </body>
 </html>
