--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
 </head>
 <body>
     <header class="page-header">
-        <nav>
-            <a href="index.html" class="active">Home</a>
+        <nav class="nav-bar">
+            <a href="#" class="logo">Andrés</a>
+            
+            <div class="nav-bar--links">
+            <a href="index.html">Home</a>
             <a href="#">About</a>
             <a href="#">Portfolio</a>
             <a href="#">Services</a>
             <a href="#">Contact</a>
+            </div>
+
         </nav>
     </header>
     <main>
