--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
         <nav class="nav-bar">
             <a href="#" class="logo">Andrés</a>
             
-            <div class="nav-bar--links">
-            <a href="index.html">Home</a>
-            <a href="#">About</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
+            <div class="nav-bar__links">
+                <a class="nav-bar__link" href="index.html">Home</a>
+                <a class="nav-bar__link" href="#">About</a>
+                <a class="nav-bar__link" href="#">Portfolio</a>
+                <a class="nav-bar__link" href="#">Services</a>
+                <a class="nav-bar__link" href="#">Contact</a>
             </div>
-
         </nav>
     </header>
     <main>
